# CostingPDFParser

./: .gitignore  INSTALL.md  PROJECT_PLAN.md  README.md  main.py  parser.py  pyproject.toml  requirements.txt
.trae/rules/: python-pep8-rules.md
core/: ocr_processor.py  seal_extractor.py
parsers/: base_parser.py  po_parser.py
src/costing_pdf_parser/: __init__.py  config.py  parser.py
src/costing_pdf_parser/core/: ocr_processor.py  seal_extractor.py
src/costing_pdf_parser/parsers/: base_parser.py  invoice_parser.py  po_parser.py  statement_parser.py
src/costing_pdf_parser/utils/: image_utils.py  pdf_utils.py
utils/: pdf_utils.py
