[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "costing-pdf-parser"
version = "0.1.0"
description = "Costing PDF Parser - 模块化PDF解析工具"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name"}
]
keywords = ["pdf", "ocr", "parser", "costing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyMuPDF>=1.23.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0,<2.0.0",
    "paddlepaddle>=2.6.0,<3.0.0",
    "paddleocr>=2.7.0,<3.0.0",
    "Pillow>=10.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
